@@ -25,7 +25,7 @@ public abstract class AbsGrafo implements TADs.OperacionesG{
 		boolean marcado;
 		double currCost;
 		
-		listaMarca.reemplazar(new Boolean(true), v);
+		listaMarca.reemplazar(Boolean.valueOf(true), v);
 		System.out.println("vertice "+ v);
 		for (int w=0;w<getOrden();w++){
 			marcado=(boolean)listaMarca.devolver(w);
